--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,47 @@
 /* Ini css */
+
+.section-content{
+    background-color: orange;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    text-align: center;
+
+}
+
+.section-content>h3{
+    margin:0;
+}
+
+#switch-keliling {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    width: 100%;
+    background-color: white;
+    border: 0px;
+    color: blue;
+}
+
+.formula-image {
+    text-align: center;
+}
+
+input {
+    background-color: lightgrey;
+    border: 1px solid black;
+    border-radius: 8px;
+    width: 100%;
+    padding: 4px;
+    font-family: math;
+}
+
+form>button {
+    padding: 18px;
+    background-color: orange;
+    border: 1px dotted black;
+    border-radius: 18px;
+}
+
+#reset-btn {
+    background-color: gray;
+    color: white;
+}
